<resources>
    <string name="app_name">ThePalendar</string>
			<string name="initnumber">040-65696367</string>
			<string name="initfeb2">Feb 2</string>
			<string name="initrjb">Richard Brett</string>
			<string name="initmm">Milena Markova</string>
			<string name="inithint">Ex: San Francisco</string>
			<string name="initdate">1980-01-30</string>
			<string name="about">About</string>
			<string name="aboutNote">The Palendar version 1 is a particular implementation of ga2oo mobile product on Android platform.</string>
			<string name="account">Account</string>
			<string name="account_type">Account Type</string>
			<string name="add_more_locations">Add More Locations</string>
			<string name="add_new_location">Add New Location</string>
			<string name="add_to_favorite">Choose a category to make a favorite?</string>
			<string name="add_to_favorite_title">Favorite</string>
			<string name="address">Address</string>
			<string name="all">All</string>
			<string name="all_added_to_favorite">This event and company are already added to your favorites.</string>
			<string name="all_friends_are_mandatory">All fields are mandatory.</string>
			<string name="all_palendar_friends">All Palendar Friends</string>
			<string name="already">Already</string>
			<string name="are_you_sure_to_delete_friend">Are you sure you want to delete this friend from your friend list.</string>
			<string name="are_you_sure_you_want_to_remove_all_events">Are you sure you want to remove all events.</string>
			<string name="are_you_sure_you_want_to_remove_all_recommendations">Are you sure you want to remove all Recommendations.</string>
			<string name="are_you_sure_you_want_to_remove_all_notifications">&quot;Are you sure you want to remove all notifications.&quot;</string>
			<string name="associationid">Association id</string>
			<string name="associations">Associations</string>
			<string name="attending">Attending</string>
			<string name="attending_events">Attending Events</string>
			<string name="authenticating_please_wait">Authenticating.. Please wait.</string>
			<string name="birth_date">Birth Date</string>
			<string name="blank_fields">Blank Fields</string>
			<string name="by">By </string>
			<string name="calendar_is_not_shared">Calendar is not shared.</string>
			<string name="cancel">Cancel</string>
			<string name="choose_image">Choose Image</string>
			<string name="city">City</string>
			<string name="company">Company</string>
			<string name="company_added_successfully">Company Added Successfully.</string>
			<string name="compamy_already_in_your_favorite">Company already in your favorite.</string>
			<string name="confirmpassword">Confirm Password</string>
			<string name="congrats">Congrats</string>
			<string name="connection_error">Connection error. Try again later.</string>
			<string name="contact">Contact</string>
			<string name="contact2">Contact :</string>
			<string name="country">Country</string>
			<string name="current_location">Current Location</string>
			<string name="desc"></string>
			<string name="deleteaccount">Delete Account</string>
			<string name="delete">Delete Post</string>
			<string name="delete_event">Delete event</string>
			<string name="done">Done</string>
			<string name="drinking">Drinking</string>
			<string name="driwing">Driving</string>
			<string name="enter_zip">Enter Zip</string>
			<string name="events">Events </string>
			<string name="event">Event</string>
			<string name="event_details">Event Details</string>
			<string name="event_price">\n Event Price:</string>
			<string name="enter_firstname">Enter First name</string>
			<string name="enter_lastname">Enter Last name</string>
			<string name="enter_username">Enter Username</string>
			<string name="enter_password">Enter Password</string>
			<string name="email">Email: </string>
			<string name="email2">Email</string>
			<string name="enter_email">Enter Email</string>
			<string name="error_in_server_data">Bad network connection or server is temporarily unavailable!</string>
			<string name="event_successfully_added">Event added successfully to Palendar.</string>
			<string name="event_already_in_palendar">Event already in Palendar.</string>
		    <string name="email_is_not_valid">Email address is not valid.</string>
			<string name="enter_username_again">Please enter username. Try again.</string>
			<string name="enter_password_again">Please enter password. Try again.</string>
			<string name="events_by">Events By </string>
			<string name="error_in_sending_friend_request">Error in sending friend request.</string>
			<string name="facebook">Facebook</string>
			<string name="failure">Failure</string>
			<string name="false_string">False</string>
			<string name="faq">F.A.Q</string>
			<string name="FAQNotAvailableNote">There are No F.A.Qs.</string>
			<string name="favorite_business">Favorite Business</string>
			<string name="favorite_events">Favorite Events</string>
			<string name="favorites">Favorites</string>
			<string name="featured_events">Featured Events</string>
			<string name="feb">Feb</string>
			<string name="female">Female</string>
			<string name="firstname">First Name</string>
			<string name="flying">Flying</string>
			<string name="forgot_password"><u>Forgot Password?</u></string>
			<string name="for_more_information">For More Information</string>
			<string name="friend">Friend</string>
			<string name="friend_added_to_your_friend_list">Friend added to your friend list.</string>
			<string name="friend_delete_successfully">Friend deleted successfully</string>
			<string name="friend_not_found">Friend not found</string>
			<string name="friend_request_rejected">Friend request rejected.</string>
			<string name="friend_request_sent_successfully">Friend request sent successfully.</string>
			<string name="friends">Friends</string>
			<string name="from">From : </string>
			<string name="from_your_favorite"> from your favorite.</string>
			<string name="ga2oo_info">Ga2oo info</string>
			<string name="gender">Gender</string>
			<string name="general">General</string>
			<string name="gps_disabled">GPS Disabled</string>
			<string name="gps_enabled">GPS Enabled</string>
      	  	<string name="hello">Hello World!</string>
			<string name="hits">Hits</string>
			<string name="home">Home</string>
			<string name="incorrect_username_or_password">Incorrect username or password, please try again.</string>
			<string name="invisiblemode">Invisible Mode</string>
			<string name="lastname">Last Name</string>
			<string name="location_added_want_add_more">Your location has been added. Do you want to add more?</string>
			<string name="loading">Loading</string>
			<string name="login">Login</string>
			<string name="logout">Logging out...</string>
	      	<string name="male">Male</string>
			<string name="more">More</string>
			<string name="map">Map</string>
			<string name="my_circle">My Circle</string>
      		<string name="network_unavailable_for_map">Network unavailable - you can\'t use this function. Please try again later.</string>
			<string name="no_any_notification">No any notification</string>
			<string name="no_result_found">No result found</string>
			<string name="network_unavailable_for_login">Network unavailable - Application requires network connection for full functionality. Please try again later.</string>
			<string name="new_point">new point</string>
			<string name="next">Next</string>
			<string name="notifications">Notifications</string>
			<string name="no_event">no event</string>
			<string name="no_any_event_on">Not any event on </string>
			<string name="no_attending_events">No Attending Events.</string>
			<string name="no_favorite_events">No Favorite Events.</string>
			<string name="no">No</string>
			<string name="no_friend_yet">No friends yet</string>
			<string name="no_events_found">No Events Found</string>
			<string name="no_results_found">No Results Found</string>
			<string name="no_search_results">No Search Results</string>
			<string name="not_any_notification">Not Any Notification</string>
			<string name="not_any_recommendation">Not Any Recommendation</string>
	      	<string name="on">On</string>
			<string name="ok">Ok</string>
			<string name="palendar">Palendar</string>
			<string name="password">Password</string>
			<string name="password_recover">Forgot Password</string>
			<string name="personal">Personal</string>
			<string name="playing">Playing</string>
			<string name="please_enter_facebook_associationId">Please enter facebook associationId.</string>
			<string name="please_enter_same_password">Please enter same password.</string>
			<string name="please_enter_twitter_associationId">Please enter Twitter associationId.</string>
			<string name="please_enter_youtube_associationId">Please enter Youtube associationId.</string>
			<string name="please_enter_zip">Please enter zip code</string>
 			<string name="post">Wall Post!</string>
			<string name="previous">Previous</string>
			<string name="profile">Profile</string>
			<string name="quick_search">Quick Search</string>
			<string name="registered_successfully">You are registered successfully.Login and enjoy the services.</string>
			<string name="registration">Registration</string>
			<string name="registration_is_failed">Registration is failed.</string>
			<string name="request">Request!</string>
			<string name="register">Register</string>
			<string name="recomendation_sent">Recommendation sent</string>
			<string name="recommendations">Recommendations</string>
			<string name="saved_locations">Saved Locations</string>
			<string name="search">Search</string>
			<string name="search_by_keyword">Search By Keyword</string>
			<string name="search_by_location">Search By Location</string>
			<string name="search_friends">Search Friends</string>
			<string name="search_hint">Insert search value</string>
			<string name="search_notifications">Search Notifications</string>
			<string name="search_result">Search Result</string>
			<string name="see_more_events"><a href="http://en.html">see more events</a></string>
			<string name="selected_location">Select Location</string>
			<string name="select_location">Select Location</string>
			<string name="sending">Sending...</string>
			<string name="server_is_unavailable">Server is unavailable.</string>
			<string name="settings">Settings</string>
			<string name="share_event">Share</string>
			<string name="sms">SMS</string>
			<string name="some_error">there is some error. Please try again</string>
			<string name="some_problem">There is some problem please try after some time.</string>
			<string name="specific_palendar_friends">Specific Palendar Friends</string>
			<string name="start_date">Start Date :</string>
			<string name="start_time">\n Start Time :</string>
			<string name="state">State</string>
			<string name="success">Success</string>
			<string name="sure_make_location_primary">Are you sure you want make this location as your primary location.</string>
			<string name="sure_to_delete_event_from_palender">Are you sure you want remove this event from your palender?</string>
			<string name="sure_to_delete_event">Are you sure you want to delete event </string>
			<string name="sure_to_delete_favorite">Are you sure you want to delete company </string>
			<string name="sure_to_remove_location">Are you sure you want to remove this location from your saved location list.</string>
			<string name="testing">Testing</string>
			<string name="there_are_no_friend">There are no friend</string>
			<string name="top_hits">Top hits </string>
			<string name="true_string">True</string>
			<string name="try_again">Try again</string>
			<string name="twitter">Twitter</string>
			<string name="upcoming_events">Upcoming Events</string>
			<string name="update_image">Update Image</string>
			<string name="upload">Upload Photo</string>
			<string name="username">Username</string>
</resources>