<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/show_previous"
          android:icon="@android:drawable/ic_media_previous"
          android:title="@string/previous" />
    <item android:id="@+id/show_next"
          android:icon="@android:drawable/ic_media_next"
          android:title="@string/next" />
    <item android:id="@+id/add_to_favorite"
          android:icon="@drawable/star"
          android:title="@string/add_to_favorite_title"/>
    <item android:id="@+id/share_event"
          android:icon="@drawable/share"
          android:title="@string/share_event"/>
    <item android:id="@+id/delete_event" 
          android:icon="@android:drawable/ic_menu_delete" 
          android:title="@string/delete_event"></item>
</menu>