<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:gravity="center"
  android:background="@drawable/mainbg"
  android:id="@+id/llLoginMain"
  android:orientation="vertical">
  	
	  	<TextView android:layout_width="fill_parent"
	  			  android:layout_height="wrap_content"
	  			  android:background="@drawable/top_bar_empty"
	  			  android:gravity="center"
	  			  android:text="@string/login"
	  			  android:textSize="21dip"
	  			  android:textStyle="bold"
	  			  android:textColor="#ffffff" />
	  	
	  	<LinearLayout
			  android:layout_width="fill_parent"
			  android:layout_height="fill_parent"
			  android:layout_marginTop="30dip"
			  android:gravity="center_horizontal"
			  android:orientation="vertical">
			  
			  <com.facebook.android.LoginButton
			  		 android:layout_width="wrap_content"
	  			  android:layout_height="wrap_content"
	  			  android:background="@drawable/facebook_login_button"
	  			  android:layout_gravity="right"
	  			  android:id="@+id/facebook_login_button"
	  			  android:layout_marginRight="10dip"/>
  
	  	<RelativeLayout
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:background="@drawable/topbg"
	    	android:layout_marginTop="20dip"
	    	android:layout_marginLeft="10dip"
	    	android:layout_marginRight="10dip"
	    	android:gravity="center_vertical">
	   
	   			<TextView
	   				android:layout_width="100dip"
	   				android:layout_height="wrap_content"
	   				android:text="@string/username"
	   				android:id="@+id/tvusername"
	   				android:textColor="#000000"
	   				android:textStyle="bold"
	   				android:layout_marginLeft="20dip"/>
	   	
	   			<EditText
			    	android:singleLine="true" 
			    	android:layout_width="fill_parent" 
			    	android:background="@null" 
			    	android:hint="@string/enter_username"
			    	android:layout_toRightOf="@+id/tvusername"
			    	android:layout_height="wrap_content"
			    	android:id="@+id/loginUsername"
			    	android:textSize="13dip"
			    	android:layout_marginRight="10dip" />
			    <ImageView 
			    	android:layout_width="wrap_content"
			    	android:layout_height="wrap_content"
			    	android:layout_marginLeft="270dip"
			    	android:visibility="gone"
			    	android:id="@+id/ivClearUsername"
			    	android:src="@drawable/cross"
			    	/>
	   </RelativeLayout>
	    
	    
	    <RelativeLayout
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:background="@drawable/bottombg"
	    	android:layout_marginLeft="10dip"
	    	android:layout_marginRight="10dip"
	    	android:gravity="center_vertical">
	   
	   			<TextView
	   				android:layout_width="100dip"
	   				android:layout_height="wrap_content"
	   				android:id="@+id/tvPassword"
	   				android:text="@string/password"
	   				android:textColor="#000000"
	   				android:textStyle="bold"
	   				android:layout_marginLeft="20dip"/>
	   			<EditText
			    	android:singleLine="true" 
			    	android:layout_width="fill_parent" 
			    	android:background="@null" 
			    	android:hint="@string/enter_password"
			    	android:layout_height="wrap_content"
			    	android:id="@+id/etPassword"
			    	android:password="true"
			    	android:textSize="13dip"
			    	android:layout_toRightOf="@+id/tvPassword"
			    	android:layout_marginRight="10dip" 
			    	android:imeOptions="actionGo"/>
			    	<ImageView 
			    	android:layout_width="wrap_content"
			    	android:layout_height="wrap_content"
			    	android:layout_marginLeft="270dip"
			    	android:visibility="gone"
			    	android:id="@+id/ivClearPassword"
			    	android:src="@drawable/cross"
			    	/>
	   </RelativeLayout>
	   
	   <Button android:layout_width="fill_parent"
	  			  android:layout_height="wrap_content"
	  			  android:layout_marginTop="10dip"
	  			  android:layout_marginLeft="10dip"
	    		  android:layout_marginRight="10dip"
	    		  android:gravity="center"
	    		  android:text="@string/register"
	   			  android:textColor="#000000"
	   			  android:textStyle="bold"
	    		  android:id="@+id/btnRegister"
	  			  android:background="@drawable/curve_bg" />
	  			  
	   <Button android:layout_width="wrap_content"
	  			  android:layout_height="wrap_content"
	  			  android:layout_marginTop="10dip"
	  			  android:layout_marginLeft="20dip"
	    		  android:layout_marginRight="20dip"
	    		  android:id="@+id/btnLogin"
	  			  android:background="@drawable/login_btn_click" />
	  			  
	  <TextView android:layout_width="wrap_content"
	  			android:layout_height="wrap_content"
	  			android:text="@string/forgot_password"
	  			android:layout_marginTop="15dip"
	  			android:id="@+id/frogot_password"/>
	  	  </LinearLayout>
</LinearLayout>
