<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical" android:background="@drawable/mainbg">
  
  			<RelativeLayout
  				android:layout_width="fill_parent"
  				android:layout_height="wrap_content"
  				android:background="@drawable/top_bar_empty" android:gravity="center_vertical">
  				<Button
					android:id="@+id/btnBack"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:background="@drawable/back"
					android:visibility="visible"
					android:layout_marginLeft="5dp">
				</Button>
  				<TextView android:layout_height="wrap_content"
			  			  
			  			  android:gravity="center"
			  			  android:textSize="21sp"
			  			  android:textStyle="bold"
			  			  android:textColor="#ffffff" android:text="@string/registration" android:layout_width="fill_parent" android:paddingLeft="10dp"/>
			</RelativeLayout>
  				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/account_type"
					android:textColor="#4C566C"
					android:layout_marginLeft="15dp"
					android:textStyle="bold"
					android:textSize="18sp"
					android:layout_marginTop="10dp"
					android:layout_marginBottom="5dp"/>
 						<RelativeLayout
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:background="@drawable/list_bg_three"
							android:gravity="center_vertical"
							android:layout_marginLeft="10dp"
							android:layout_marginRight="10dp" android:id="@+id/rlPersonal">
							
								<TextView
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									android:layout_margin="10dp"
									android:textColor="#000000" 
									android:textStyle="bold" android:textSize="17sp" android:text="@string/personal"/>
									
								<LinearLayout
									android:layout_width="30dp"
									android:layout_height="40dp"
									android:layout_alignParentRight="true"
									android:gravity="center_vertical">
									
										<ImageView
											android:layout_width="wrap_content"
											android:layout_height="20dp"
											android:contentDescription="@string/desc"
											android:src="@drawable/arrow"/>
								</LinearLayout>
						</RelativeLayout>			
</LinearLayout>
