<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:id ="@+id/layoutSettings"
  android:orientation="vertical"
  android:gravity="center">
  
  			<ScrollView
  				android:layout_width = "fill_parent"
  				android:layout_height = "wrap_content"
  				android:scrollbars = "none"
  				android:fadingEdge="none"
  				>
  			<LinearLayout
  						android:orientation="vertical"
  						android:layout_width="fill_parent"
  						android:layout_height="wrap_content"
  						android:gravity="center"
  						>
  						<TextView
							android:layout_height="30dp"
							android:text="@string/settings"
							android:textStyle="bold"
							android:gravity="center_vertical" 
							android:layout_marginTop="10dp" 
							android:textSize="16sp"
							android:textColor="@color/heading_color_dark" 
							android:layout_marginLeft="10dp" 
							android:layout_width="fill_parent"/>
  						<RelativeLayout
							android:id="@+id/rellayProfile"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:background="@drawable/list_bg_one"
							android:gravity="center_vertical"
							android:layout_marginLeft="10dp"
							android:layout_marginRight="10dp">
							
								<TextView
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									android:layout_margin="10dp"
									android:textColor="#000000" 
									android:text="@string/profile" 
									android:textStyle="bold" android:textSize="15sp"/>
									
								<LinearLayout
									android:layout_width="30dp"
									android:layout_height="40dp"
									android:layout_alignParentRight="true"
									android:gravity="center_vertical">
									
										<ImageView
											android:layout_width="wrap_content"
											android:layout_height="20dp"
											android:contentDescription="@string/desc"
											android:src="@drawable/arrow"/>
								</LinearLayout>
						</RelativeLayout>
						
						<RelativeLayout
							android:id="@+id/rellayMyCircle"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:background="@drawable/list_bg_two"
							android:gravity="center_vertical"
							android:layout_marginLeft="10dp"
							android:layout_marginRight="10dp">
							
								<TextView
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									android:layout_margin="10dp"
									android:textColor="#000000" 
									android:text="@string/my_circle" 
									android:textStyle="bold" android:textSize="15sp"/>
									
								<LinearLayout
									android:layout_width="30dp"
									android:layout_height="40dp"
									android:layout_alignParentRight="true"
									android:gravity="center_vertical">
									
										<ImageView
											android:layout_width="wrap_content"
											android:layout_height="20dp"
											android:contentDescription="@string/desc"
											android:src="@drawable/arrow"/>
								</LinearLayout>
						</RelativeLayout>
						<RelativeLayout
							android:id="@+id/rellayFavorites"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:background="@drawable/list_bg_two"
							android:gravity="center_vertical"
							android:layout_marginLeft="10dp"
							android:layout_marginRight="10dp">
							
								<TextView
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									android:layout_margin="10dp"
									android:textColor="#000000" 
									android:text="@string/favorites" 
									android:textStyle="bold" android:textSize="15sp"/>
									
								<LinearLayout
									android:layout_width="30dp"
									android:layout_height="40dp"
									android:layout_alignParentRight="true"
									android:gravity="center_vertical">
									
										<ImageView
											android:layout_width="wrap_content"
											android:layout_height="20dp"
											android:contentDescription="@string/desc"
											android:src="@drawable/arrow"/>
								</LinearLayout>
						</RelativeLayout>

  						
						<RelativeLayout
							android:id="@+id/rellayAccount"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:background="@drawable/list_bg_three"
							android:gravity="center_vertical"
							android:layout_marginLeft="10dp"
							android:layout_marginRight="10dp">
							
								<TextView
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									android:layout_margin="10dp"
									android:textColor="#000000" 
									android:text="@string/account" 
									android:textStyle="bold" android:textSize="15sp"/>
									
								<LinearLayout
									android:layout_width="30dp"
									android:layout_height="40dp"
									android:layout_alignParentRight="true"
									android:gravity="center_vertical">
									
										<ImageView
											android:layout_width="wrap_content"
											android:layout_height="20dp"
											android:contentDescription="@string/desc"
											android:src="@drawable/arrow"/>
								</LinearLayout>
						</RelativeLayout>				
  						<TextView
							android:layout_width="fill_parent"
							android:layout_height="30dp"
							android:text="@string/general"
							android:textStyle="bold"
							android:gravity="center_vertical" 
							android:textSize="16sp"
							android:layout_marginTop="10dp" 
							android:textColor="@color/heading_color_dark" 
							android:layout_marginLeft="10dp"/>
  						<RelativeLayout
							android:id="@+id/rellayAbout"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:background="@drawable/list_bg_one"
							android:gravity="center_vertical"
							android:layout_marginLeft="10dp"
							android:layout_marginRight="10dp">
							
								<TextView
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									android:layout_margin="10dp"
									android:textColor="#000000" 
									android:text="@string/about" 
									android:textStyle="bold" android:textSize="15sp"/>
									
								<LinearLayout
									android:layout_width="30dp"
									android:layout_height="40dp"
									android:layout_alignParentRight="true"
									android:gravity="center_vertical">
									
										<ImageView
											android:layout_width="wrap_content"
											android:layout_height="20dp"
											android:contentDescription="@string/desc"
											android:src="@drawable/arrow"/>
								</LinearLayout>
						</RelativeLayout>
						<RelativeLayout
							android:id="@+id/rellayFaq"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:background="@drawable/list_bg_two"
							android:gravity="center_vertical"
							android:layout_marginLeft="10dp"
							android:layout_marginRight="10dp">
							
								<TextView
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									android:layout_margin="10dp"
									android:textColor="#000000" 
									android:text="@string/faq" 
									android:textStyle="bold" android:textSize="15sp"/>
									
								<LinearLayout
									android:layout_width="30dp"
									android:layout_height="40dp"
									android:layout_alignParentRight="true"
									android:gravity="center_vertical">
									
										<ImageView
											android:layout_width="wrap_content"
											android:layout_height="20dp"
											android:contentDescription="@string/desc"
											android:src="@drawable/arrow"/>
								</LinearLayout>
						</RelativeLayout>
  						
						<RelativeLayout
							android:id="@+id/rellayContact"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:background="@drawable/list_bg_three"
							android:gravity="center_vertical"
							android:layout_marginLeft="10dp"
							android:layout_marginRight="10dp"
							android:layout_marginBottom="20dp">
							
								<TextView
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									android:layout_margin="10dp"
									android:textColor="#000000" 
									android:text="@string/contact" 
									android:textStyle="bold" android:textSize="15sp"/>
									
								<LinearLayout
									android:layout_width="30dp"
									android:layout_height="40dp"
									android:layout_alignParentRight="true"
									android:gravity="center_vertical">
									
										<ImageView
											android:layout_width="wrap_content"
											android:layout_height="20dp"
											android:contentDescription="@string/desc"
											android:src="@drawable/arrow"/>
								</LinearLayout>
						</RelativeLayout>	
  						
  					</LinearLayout>
  			</ScrollView>
  
</LinearLayout>
