<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:gravity="center"
  android:background="@drawable/mainbg"
  android:id="@+id/llLoginMain"
  android:orientation="vertical">
	  	<RelativeLayout
  				android:layout_width="fill_parent"
  				android:layout_height="wrap_content"
  				android:background="@drawable/top_bar_empty" android:gravity="center_vertical">
  				<Button
					android:id="@+id/btnBack"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:background="@drawable/back"
					android:visibility="visible"
					android:layout_marginLeft="5dp">
				</Button>
  				<TextView android:layout_height="wrap_content"
			  			  
			  			  android:gravity="center"
			  			  android:textSize="21sp"
			  			  android:textStyle="bold"
			  			  android:textColor="#ffffff" 
			  			  android:text="@string/password_recover" 
			  			  android:layout_width="fill_parent" 
			  			  android:paddingLeft="10dp"/>
			</RelativeLayout>
	  	<LinearLayout
			  android:layout_width="fill_parent"
			  android:layout_height="fill_parent"
			  android:layout_marginTop="30dp"
			  android:gravity="center_horizontal"
			  android:orientation="vertical">
  
	  	<RelativeLayout
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:background="@drawable/curve_bg"
	    	android:layout_marginTop="20dp"
	    	android:layout_marginLeft="10dp"
	    	android:layout_marginRight="10dp"
	    	android:gravity="center_vertical">
	   
	   			<TextView
	   				android:layout_width="100dp"
	   				android:layout_height="wrap_content"
	   				android:text="@string/email"
	   				android:id="@+id/tvemail"
	   				android:textColor="#000000"
	   				android:textStyle="bold"
	   				android:layout_marginLeft="20dp"/>
	   	
	   			<EditText
			    	android:singleLine="true" 
			    	android:layout_width="fill_parent" 
			    	android:background="@null" 
			    	android:hint="@string/enter_email"
			    	android:layout_toRightOf="@+id/tvemail"
			    	android:layout_height="wrap_content"
			    	android:id="@+id/etEmail"
			    	android:inputType="textEmailAddress"
			    	android:textSize="13sp"
			    	android:layout_marginRight="10dp" />
			    <ImageView 
			    	android:layout_width="wrap_content"
			    	android:layout_height="wrap_content"
			    	android:layout_marginLeft="270dp"
			    	android:visibility="gone"
			    	android:id="@+id/ivClearEmail"
			    	android:contentDescription="@string/desc"
			    	android:src="@drawable/cross"
			    	/>
	   </RelativeLayout>
	  
	   <Button android:layout_width="wrap_content"
	  			  android:layout_height="wrap_content"
	  			  android:layout_marginTop="10dp"
	  			  android:layout_marginLeft="20dp"
	    		  android:layout_marginRight="20dp"
	    		  android:id="@+id/btnSendPass"
	    		  android:background="@drawable/send_password" />
	  			  
	  	  </LinearLayout>
</LinearLayout>
