<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:id ="@+id/layoutSettings"
  android:orientation="vertical"
  android:gravity="center">
	<RelativeLayout  
	     android:id="@+id/rlTitle"
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content"
	     android:background="@drawable/btnbg">
	    
	     <EditText  android:id="@+id/etSearchList"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:background="@drawable/search_editbg"
	          android:textColor="#000000"
	          android:textSize="13sp"
	          android:layout_alignParentLeft="true"
	          android:layout_centerVertical="true"
	          android:layout_marginLeft="10dp"
	          android:paddingLeft="30dp" 
	          android:gravity="left|center_vertical"
	          android:hint="@string/search" 
	          android:singleLine="true" android:imeOptions="actionDone"/>
	          
	      
		     
		   <ImageView  android:id="@+id/ivSave"
		       android:contentDescription="@string/desc" 
		      android:layout_width="wrap_content"
		      android:layout_height="wrap_content"
		      android:src="@drawable/editsave"
		      android:layout_marginLeft="210dp"
		      android:layout_centerVertical="true"
		     />  
	      
	      <Button   android:id="@+id/btn_cancel"
	          android:layout_width="wrap_content"
	     	  android:layout_height="wrap_content"
	     	  android:layout_centerVertical="true"
	     	   android:layout_toRightOf="@id/etSearchList"
	     	  android:layout_marginRight="10dp"
	     	  android:layout_marginLeft="10dp"
	     	  android:background="@drawable/cancel_btn_click"/>
	   </RelativeLayout>

			 		<TextView 
			 			android:layout_width="fill_parent"
			 			android:layout_height="wrap_content"
			 			android:text="@string/favorite_business"
			 			android:textSize="16sp"
	  				    android:textColor="@color/heading_color_dark"
	  				    android:textStyle="bold"
	  				    android:id="@+id/tvFBusiness"
	  				    android:layout_marginLeft="10dp"
	  					/>
	  					<View
	  						android:layout_width="fill_parent"
	  						android:layout_height="1.5dp"
	  						android:background="@drawable/seperator"
	  						android:id="@+id/vSeprator"
	  						android:layout_marginBottom="10dp"
	  						android:layout_marginTop="3dp"
	  					/>
					<LinearLayout 
						android:layout_width="fill_parent"
						android:layout_height="fill_parent"
						android:orientation="horizontal"
						android:id="@+id/llFavoriteBusiness"
					>
						<TextView 
							android:layout_width="fill_parent"
							android:layout_height="fill_parent"
							android:text="@string/no_search_results"
							android:textSize="16sp"
							android:textColor="@color/heading_color_dark"
							android:gravity="center"
							android:id="@+id/tvNotification"
						/>
						<ListView
							android:layout_width="fill_parent"
							android:layout_height="fill_parent"
							android:id="@+id/lvFavoriteBusiness"
							android:divider="#ffffff"
							android:dividerHeight="1dp"
							android:isScrollContainer="false"						
						 >
						
						</ListView>
					</LinearLayout>

  			
</LinearLayout>
